# robot_assistant

./: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults
backend/: .env.example  .gitignore  README.md  requirements.txt
backend/app/: __init__.py  activities.py  activity_router.py  barkoba.py  barkoba_facts.py  barkoba_gpt.py  conversation_state.py  curated_content.py  hungarian_content.py  intent_router.py  kids_safety.py  main.py  mock_answers.py  openai_client.py  parent_settings.py  personality.py  profiles.py  schemas.py  session_memory.py  story_engine.py  stt.py  tts.py  weather.py
backend/app/data/: hungarian_jokes.json  hungarian_riddles.json
backend/app/static/: test_chat.html
backend/tests/: test_activity_engine.py  test_barkoba_game.py  test_barkoba_gpt.py  test_curated_content.py  test_hungarian_accents.py  test_hungarian_content.py  test_kids_chat.py  test_profile_preservation.py  test_routing_priority.py  test_story_gpt.py  test_test_chat_page.py  test_tts_disabled.py  test_tts_instructions.py  test_voice_loop.py
docs/: KIDS_CHAT_BACKEND.md
main/: CMakeLists.txt  Kconfig.projbuild  camera_web_server.c  camera_web_server.h  face_detect.cpp  face_detect.h  face_enroll.c  face_enroll.h  face_recognition.cpp  face_recognition.h  face_status.c  face_status.h  idf_component.yml  kids_safety.c  kids_safety.h  led_effects.c  led_effects.h  main.c  robot_chat.c  robot_chat.h  robot_face.c  robot_face.h  robot_state.c  robot_state.h  robot_voice.c  robot_voice.h  secrets.h.example  web_server.c  web_server.h  wifi_manager.c  wifi_manager.h  wifi_profiles.h  wifi_secrets.h.example
main/audio_play_driver/: audio_driver.c  audio_driver.h
main/button_driver/: button_driver.c  button_driver.h
main/camera_driver/: camera_driver.c  camera_driver.h
main/hardeware_driver/: bsp_board.c  bsp_board.h
main/lcd_driver/: lcd_driver.c  lcd_driver.h
main/lvgl_driver/: lvgl_driver.c
