set(SOURCES
    "./main.c"
    "./robot_face.c"
    "./hardeware_driver/bsp_board.c"
    "./audio_play_driver/audio_driver.c"
    "./tca9555_driver/tca9555_driver.c"
    "./lcd_driver/lcd_driver.c"
    "./lvgl_driver/lvgl_driver.c"
    "./robot_state.c"
    "./button_driver/button_driver.c"
    "./wifi_manager.c"
    "./web_server.c"
    "./led_effects.c"
    "./robot_chat.c"
    "./robot_voice.c"
)

set(INCLUDE_DIRS
    "."
    "./hardeware_driver"
    "./audio_play_driver"
    "./tca9555_driver"
    "./lcd_driver"
    "./lvgl_driver"
    "./button_driver"
)

idf_component_register(
    SRCS ${SOURCES}
    INCLUDE_DIRS ${INCLUDE_DIRS}
    REQUIRES
        esp_wifi
        esp_netif
        esp_event
        nvs_flash
        esp_http_server
        esp_http_client
        esp_timer
        esp_lcd
        esp_driver_gpio
        esp_driver_i2c
        esp_driver_i2s
        esp_driver_spi
        esp_driver_ledc
        sdmmc
        fatfs
        esp_psram
        esp_lvgl_port
        lvgl
        espressif__esp_codec_dev
        espressif__esp_audio_simple_player
        espressif__esp_audio_codec
        espressif__esp_audio_effects
        espressif__gmf_core
        espressif__gmf_io
        espressif__gmf_audio
        espressif__esp_io_expander
        espressif__esp_io_expander_tca95xx_16bit
        espressif__led_strip
)
